--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>consumer</module>
         <module>security</module>
         <module>consumer-web</module>
+        <module>blog-reptile</module>
     </modules>
 
     <parent>
